2006-07-15  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R (edge.betweenness) :
	range check for 'e' argument

2006-07-14  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/attributes.R (get.vertex.attribute)
	(set.vertex.attribute, get.edge.attribute, set.edge.attribute) :
	bugs eliminated ('g' in the argument list instead of 'graph')

	* interfaces/R/igraph/R/structural.properties.R (get.shortest.paths) :
	bug eliminated

2006-07-11  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/foreign.R (read.graph) : pajek format added
	(read.graph.pajek) : added
	* interfaces/R/src/rinterface.c (R_igraph_read_graph_pajek) : added

	* interfaces/R/igraph/R/layout.R (layout.merge) : bug corrected

	* interfaces/R/igraph/R/operators.R (graph.disjoint.union)
	(graph.union, graph.intersection, graph.compose) : graph argument 
	checking bugs corrected

	* interfaces/R/src/rinterface.c (R_igraph_attribute_add_edges) : 
	string attribute type bug corrected

	* interfaces/R/src/rinterface.c (R_igraph_strvector_to_SEXP) : 
	argument type now const

2006-07-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/games.R (aging.prefatt.game) : zero.age.appeal
	age.coef, deg.coef added
	* interfaces/R/src/rinterface.c (R_igraph_barabasi_aging_game) : 
	zero_age_appeal, deg_coef, age_coef added

2006-06-28  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/structural.properties.R (constraint) : added
	* interfaces/R/igraph/src/rinterface.c (R_igraph_constraint) : added

2006-06-24  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/plot.common.R (i.get.vertex.frame.color) : 
	added
	* interfaces/R/igraph/R/plot.R (plot.igraph) : vertex.frame.color
	argument added
	* interfaces/R/igraph/R/tkplot.R (tkplot) : vertex.frame.color
	argument added
	(.tkplot.create.vertex) : vertex.frame.color handling added
	(.tkplot.deselect.vertex) : vertex.frame.color handling added
