@@ -1,3 +1,8 @@
+2006-07-17  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/src/rinterface.c : updated to new delete_edges 
+	interface
+
 2006-07-15  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/structural.properties.R (edge.betweenness) :
